--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.11.0",
+    "@lottiefiles/lottie-player": "^2.0.12",
     "@radix-ui/react-accordion": "^1.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
